--- a/src/css/glide.theme.css
+++ b/src/css/glide.theme.css
@@ -48,6 +48,49 @@ margin-right: 2rem;
   padding-left: 20px;
 
 }
+
+
+.glide__arrow--left1 {
+  border: 4px solid #34eaf7;
+  height: 6rem;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  width: 5rem;
+  padding-right: 2.5rem;
+  padding-left: 2.5rem;
+margin-right: 2rem;
+  left: 4em;
+}
+
+
+  
+  .glide__arrow--left1 {
+    border: 4px solid #34eaf7;
+   align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    height: 7rem;
+    width: 7rem;
+    padding-right: 2.5rem;
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+    padding-left: 2.5rem;
+  margin-right: 2rem;
+  }
+
+.glide__arrow--right1 {
+  border: 4px solid #34eaf7;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  right: 4em;
+  height: 7rem;
+  width: 7rem;
+  padding-right: 2.5rem;
+  padding-left: 2.5rem;
+
+}
 .glide__arrow--disabled {
   opacity: 0.33;
 }
@@ -97,4 +140,179 @@ margin-right: 2rem;
   cursor: grabbing;
   cursor: -moz-grabbing;
   cursor: -webkit-grabbing;
+}
+
+
+@media screen and (min-width: 400rem) {
+    .glide__arrow--right1 {
+      height: 4rem;
+      width: 4rem;
+      padding-right: 2.5rem;
+      padding-left: 2.5rem;    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    right: 4em;
+    
+  }
+  
+}
+
+
+.glide__arrow {
+  position: absolute;
+  display: block;
+  top: 50%;
+  z-index: 2;
+  color: white;
+  text-transform: uppercase;
+  padding: 9px 12px;
+  background-color: transparent;
+  border: 2px solid rgba(255, 255, 255, 0.5);
+  border-radius: 4px;
+  box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.1);
+  text-shadow: 0 0.25em 0.5em rgba(0, 0, 0, 0.1);
+  opacity: 1;
+  cursor: pointer;
+  transition: opacity 150ms ease, border 300ms ease-in-out;
+  transform: translateY(-50%);
+  line-height: 1;
+}
+.glide__arrow:focus {
+  outline: none;
+}
+.glide__arrow:hover {
+  border-color: white;
+}
+.glide__arrow--left {
+  border: 2px solid blue;
+  height: 5rem;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  width: 5rem;
+  padding-right: 20px;
+  padding-left: 20px;
+margin-right: 2rem;
+ 
+  left: 4em;
+}
+.glide__arrow--right {
+  border: 2px solid blue;
+  height: 5rem;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  width: 5rem;
+  right: 4em;
+  padding-right: 20px;
+  padding-left: 20px;
+
+}
+
+
+.glide__arrow--left1 {
+  border: 4px solid #34eaf7;
+  height: 6rem;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  width: 5rem;
+  padding-right: 2.5rem;
+  padding-left: 2.5rem;
+margin-right: 2rem;
+  left: 4em;
+}
+
+
+  
+  .glide1__arrow--left1 {
+    border: 4px solid #34eaf7;
+   align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    height: 7rem;
+    width: 7rem;
+    padding-right: 2.5rem;
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+    padding-left: 2.5rem;
+  margin-right: 2rem;
+  }
+
+.glide1__arrow--right1 {
+  border: 4px solid #34eaf7;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  right: 4em;
+  height: 7rem;
+  width: 7rem;
+  padding-right: 2.5rem;
+  padding-left: 2.5rem;
+
+}
+.glide1__arrow--disabled {
+  opacity: 0.33;
+}
+
+.glide1__bullets {
+  position: absolute;
+  z-index: 2;
+  bottom: 2em;
+  left: 50%;
+  display: inline-flex;
+  list-style: none;
+  transform: translateX(-50%);
+}
+
+.glide1__bullet {
+  background-color: rgba(255, 255, 255, 0.5);
+  width: 9px;
+  height: 9px;
+  padding: 0;
+  border-radius: 50%;
+  border: 2px solid transparent;
+  transition: all 300ms ease-in-out;
+  cursor: pointer;
+  line-height: 0;
+  box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.1);
+  margin: 0 0.25em;
+}
+.glide1__bullet:focus {
+  outline: none;
+}
+.glide1__bullet:hover,
+.glide1__bullet:focus {
+  border: 2px solid white;
+  background-color: rgba(255, 255, 255, 0.5);
+}
+.glide1__bullet--active {
+  background-color: white;
+}
+
+.glide1--swipeable {
+  cursor: grab;
+  cursor: -moz-grab;
+  cursor: -webkit-grab;
+}
+
+.glide1--dragging {
+  cursor: grabbing;
+  cursor: -moz-grabbing;
+  cursor: -webkit-grabbing;
+}
+
+
+@media screen and (min-width: 400rem) {
+    .glide1__arrow--right1 {
+      height: 4rem;
+      width: 4rem;
+      padding-right: 2.5rem;
+      padding-left: 2.5rem;    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    right: 4em;
+    
+  }
+  
 }
