--- a/src/css/glide.theme.css
+++ b/src/css/glide.theme.css
@@ -32,8 +32,8 @@
   width: 5rem;
   padding-right: 20px;
   padding-left: 20px;
-margin-right: 2rem;
- 
+  margin-right: 2rem;
+
   left: 4em;
 }
 .glide__arrow--right {
@@ -46,38 +46,32 @@ margin-right: 2rem;
   right: 4em;
   padding-right: 20px;
   padding-left: 20px;
-
 }
 
-
-.glide__arrow--left1 {
+.glide__arrow--right1 {
   border: 4px solid #34eaf7;
   height: 6rem;
   align-items: center;
   justify-content: center;
   border-radius: 50%;
   width: 5rem;
-  padding-right: 2.5rem;
-  padding-left: 2.5rem;
-margin-right: 2rem;
+  padding-right: 20px;
+  padding-left: 20px;
+  margin-right: 2rem;
   left: 4em;
 }
 
-
-  
-  .glide__arrow--left1 {
-    border: 4px solid #34eaf7;
-   align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-    height: 7rem;
-    width: 7rem;
-    padding-right: 2.5rem;
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
-    padding-left: 2.5rem;
+.glide__arrow--left1 {
+  border: 4px solid #34eaf7;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  height: 7rem;
+  width: 7rem;
+  padding-right: 20px;
+  padding-left: 20px;
   margin-right: 2rem;
-  }
+}
 
 .glide__arrow--right1 {
   border: 4px solid #34eaf7;
@@ -85,11 +79,10 @@ margin-right: 2rem;
   justify-content: center;
   border-radius: 50%;
   right: 4em;
-  height: 7rem;
-  width: 7rem;
-  padding-right: 2.5rem;
-  padding-left: 2.5rem;
-
+  height: 5rem;
+  width: 5rem;
+  padding-right: 20px;
+  padding-left: 20px;
 }
 .glide__arrow--disabled {
   opacity: 0.33;
@@ -142,21 +135,18 @@ margin-right: 2rem;
   cursor: -webkit-grabbing;
 }
 
-
 @media screen and (min-width: 400rem) {
-    .glide__arrow--right1 {
-      height: 4rem;
-      width: 4rem;
-      padding-right: 2.5rem;
-      padding-left: 2.5rem;    align-items: center;
+  .glide__arrow--right1 {
+    height: 4rem;
+    width: 4rem;
+    padding-right: 2.5rem;
+    padding-left: 2.5rem;
+    align-items: center;
     justify-content: center;
     border-radius: 50%;
     right: 4em;
-    
   }
-  
 }
-
 
 .glide__arrow {
   position: absolute;
@@ -192,8 +182,8 @@ margin-right: 2rem;
   width: 5rem;
   padding-right: 20px;
   padding-left: 20px;
-margin-right: 2rem;
- 
+  margin-right: 2rem;
+
   left: 4em;
 }
 .glide__arrow--right {
@@ -206,50 +196,31 @@ margin-right: 2rem;
   right: 4em;
   padding-right: 20px;
   padding-left: 20px;
-
 }
 
 
-.glide__arrow--left1 {
+.glide1__arrow--left1 {
   border: 4px solid #34eaf7;
-  height: 6rem;
   align-items: center;
   justify-content: center;
   border-radius: 50%;
+  height: 5rem;
   width: 5rem;
-  padding-right: 2.5rem;
-  padding-left: 2.5rem;
-margin-right: 2rem;
-  left: 4em;
+  padding-right: 20px;
+  padding-left: 20px;
+  margin-right: 1rem;
 }
-
-
-  
-  .glide1__arrow--left1 {
-    border: 4px solid #34eaf7;
-   align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-    height: 7rem;
-    width: 7rem;
-    padding-right: 2.5rem;
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
-    padding-left: 2.5rem;
-  margin-right: 2rem;
-  }
 
 .glide1__arrow--right1 {
   border: 4px solid #34eaf7;
   align-items: center;
   justify-content: center;
   border-radius: 50%;
-  right: 4em;
-  height: 7rem;
-  width: 7rem;
-  padding-right: 2.5rem;
-  padding-left: 2.5rem;
-
+  right: 1em;
+  height: 5rem;
+  width: 5rem;
+  padding-right: 20px;
+  padding-left: 20px;
 }
 .glide1__arrow--disabled {
   opacity: 0.33;
@@ -300,19 +271,4 @@ margin-right: 2rem;
   cursor: grabbing;
   cursor: -moz-grabbing;
   cursor: -webkit-grabbing;
-}
-
-
-@media screen and (min-width: 400rem) {
-    .glide1__arrow--right1 {
-      height: 4rem;
-      width: 4rem;
-      padding-right: 2.5rem;
-      padding-left: 2.5rem;    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-    right: 4em;
-    
-  }
-  
 }
