--- a/src/css/glide.theme.css
+++ b/src/css/glide.theme.css
@@ -33,7 +33,6 @@
   padding-right: 20px;
   padding-left: 20px;
   margin-right: 2rem;
-
   left: 4em;
 }
 .glide__arrow--right {
@@ -48,42 +47,7 @@
   padding-left: 20px;
 }
 
-.glide__arrow--right1 {
-  border: 4px solid #34eaf7;
-  height: 6rem;
-  align-items: center;
-  justify-content: center;
-  border-radius: 50%;
-  width: 5rem;
-  padding-right: 20px;
-  padding-left: 20px;
-  margin-right: 2rem;
-  left: 4em;
-}
 
-.glide__arrow--left1 {
-  border: 4px solid #34eaf7;
-  align-items: center;
-  justify-content: center;
-  border-radius: 50%;
-  height: 7rem;
-  width: 7rem;
-  padding-right: 20px;
-  padding-left: 20px;
-  margin-right: 2rem;
-}
-
-.glide__arrow--right1 {
-  border: 4px solid #34eaf7;
-  align-items: center;
-  justify-content: center;
-  border-radius: 50%;
-  right: 4em;
-  height: 5rem;
-  width: 5rem;
-  padding-right: 20px;
-  padding-left: 20px;
-}
 .glide__arrow--disabled {
   opacity: 0.33;
 }
@@ -135,20 +99,10 @@
   cursor: -webkit-grabbing;
 }
 
-@media screen and (min-width: 400rem) {
-  .glide__arrow--right1 {
-    height: 4rem;
-    width: 4rem;
-    padding-right: 2.5rem;
-    padding-left: 2.5rem;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-    right: 4em;
-  }
-}
 
-.glide__arrow {
+
+
+.glide1__arrow {
   position: absolute;
   display: block;
   top: 50%;
@@ -167,61 +121,37 @@
   transform: translateY(-50%);
   line-height: 1;
 }
-.glide__arrow:focus {
+.glide1__arrow:focus {
   outline: none;
 }
-.glide__arrow:hover {
+.glide1__arrow:hover {
   border-color: white;
 }
-.glide__arrow--left {
-  border: 2px solid blue;
-  height: 5rem;
+.glide1__arrow--left1 {
+   border: 2px solid blue; 
+   height: 4rem; 
   align-items: center;
   justify-content: center;
-  border-radius: 50%;
-  width: 5rem;
-  padding-right: 20px;
-  padding-left: 20px;
-  margin-right: 2rem;
+  border-radius: 50%; 
+   width: 4rem; 
+   padding-right: 15px;
+  padding-left: 15px;
+  margin-right: 2rem; 
 
   left: 4em;
 }
-.glide__arrow--right {
-  border: 2px solid blue;
-  height: 5rem;
-  align-items: center;
-  justify-content: center;
-  border-radius: 50%;
-  width: 5rem;
-  right: 4em;
-  padding-right: 20px;
-  padding-left: 20px;
-}
-
-
-.glide1__arrow--left1 {
-  border: 4px solid #34eaf7;
-  align-items: center;
-  justify-content: center;
-  border-radius: 50%;
-  height: 5rem;
-  width: 5rem;
-  padding-right: 20px;
-  padding-left: 20px;
-  margin-right: 1rem;
-}
-
 .glide1__arrow--right1 {
-  border: 4px solid #34eaf7;
+  border: 2px solid blue; 
+  height: 4rem;
   align-items: center;
   justify-content: center;
-  border-radius: 50%;
-  right: 1em;
-  height: 5rem;
-  width: 5rem;
-  padding-right: 20px;
-  padding-left: 20px;
-}
+  border-radius: 50%; 
+  width: 4rem; 
+   right: 4em; 
+   padding-right: 15px;
+  padding-left: 15px;
+} 
+
 .glide1__arrow--disabled {
   opacity: 0.33;
 }
